tests/baselines/reference/exportEqualMemberMissing.errors.txt
exportEqualMemberMissing_1.ts(3,23): error TS2339: Property 'static' does not exist on type '{ (): connectExport; foo: Date; }'.


==== exportEqualMemberMissing_1.ts (1 errors) ====
    ///<reference path='exportEqualMemberMissing_0.ts'/>
    import connect = require('./exportEqualMemberMissing_0');
    connect().use(connect.static('foo')); // Error	1	The property 'static' does not exist on value of type ''.
                          ~~~~~~
!!! error TS2339: Property 'static' does not exist on type '{ (): connectExport; foo: Date; }'.
    
==== exportEqualMemberMissing_0.ts (0 errors) ====
    module server {
        export interface connectModule {
            (res, req, next): void;
        }
        export interface connectExport {
            use: (mod: connectModule) => connectExport;
        }
    }
    var server: {
        (): server.connectExport;
        foo: Date;
    };
    export = server;
    